@@ -119,6 +119,32 @@
                         <orientation>horizontal</orientation>
                         <usecontrolcoords>true</usecontrolcoords>
                         <visible>!Control.HasFocus(8001)</visible>
+                        <control type="button">
+                            <centertop>51%</centertop>
+                            <width>36</width>
+                            <height>36</height>
+                            <onclick>Back</onclick>
+                            <texturenofocus colordiffuse="main_fg_100" flipx="true">common/arrow-48.png</texturenofocus>
+                            <texturefocus colordiffuse="$VAR[ColorHighlight]" flipx="true">common/arrow-48.png</texturefocus>
+                            <visible>Skin.HasSetting(MouseMode) + !Window.IsVisible(Home)</visible>
+                        </control>
+                        <control type="group">
+                            <width>32</width>
+                            <visible>Skin.HasSetting(MouseMode) + !Window.IsVisible(Home)</visible>
+                        </control>
+                        <!-- <control type="button">
+                            <centertop>51%</centertop>
+                            <width>36</width>
+                            <height>36</height>
+                            <onclick>ActivateWindow(Home)</onclick>
+                            <texturenofocus colordiffuse="main_fg_100" flipx="true">common/home.png</texturenofocus>
+                            <texturefocus colordiffuse="$VAR[ColorHighlight]" flipx="true">common/home.png</texturefocus>
+                            <visible>Skin.HasSetting(MouseMode) + !Window.IsVisible(Home)</visible>
+                        </control>
+                        <control type="group">
+                            <width>32</width>
+                            <visible>Skin.HasSetting(MouseMode) + !Window.IsVisible(Home)</visible>
+                        </control> -->
                         <control type="label">
                             <top>0</top>
                             <width>auto</width>
